fixed all section mobile responsiveness

--- a/style.css
+++ b/style.css
@@ -541,7 +541,12 @@ footer {
         align-items: flex-start;
     }
 
-    footer {
+    footer,
+    .offer-section,
+    .t-seller-section,
+    #shop,
+    nav,
+    .hero-details-con {
         padding: 2rem;
     }
 
@@ -562,16 +567,101 @@ footer {
 
     }
 
-    
 
-.input input {
-    padding: .4rem .6rem;
-    font-size: .5rem;
+
+    .input input {
+        padding: .4rem .6rem;
+        font-size: .5rem;
+    }
+
+    .input button {
+
+        padding: .4rem .6rem;
+        font-size: .5rem;
+    }
+
+    .offer-layout {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card h1 {
+        font-size: 2rem;
+
+    }
+
+    .card {
+        width: 100%;
+      
+    }
+.bloom h2{
+    font-size: .9rem;
 }
-.input button {
-    
- padding: .4rem .6rem;
-    font-size: .5rem;
+    .zabo h2 {
+        font-size: 1rem;
+
+
+    }
+
+    .zabo a {
+        font-size: .9rem;
+        text-decoration: none;
+        font-weight: 500;
+        text-decoration: underline;
+    }
+
+    .plants-section-description h1 {
+        font-size: 2rem;
+    }
+
+    .plants-section-description p {
+        font-size: 1rem;
+        padding: 0 0;
+    }
+
+    .t-seller-section {
+        flex-direction: column;
+    }
+
+    .t-seller-img1 {
+        display: none;
+    }
+
+    .t-seller-con2 h1 {
+        font-size: 1.5rem;
+    }
+
+    .t-seller-con2 h1 br {
+        display: none;
+    }
+
+    .t-seller-section {
+        margin-bottom: 3rem;
+    }
+
+    .plants-card-con {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+    }
+
+    .hero-section {
+        flex-direction: column-reverse;
+        padding: 0;
+    }
+    .hero-details-con h1{
+         font-size: 2rem
+    }
+    .hero-details-con p{
+         font-size: 1rem;
+    }
+    .hero-section img{
+        width: 100%;
+    }
+
+.nav-m-hide{
+    display: none;
 }
 
 }
